# py-map-generation

./: .gitignore  README.md  main.py  pyproject.toml  segs.py  setup.py
py-map-generation/: __main__.py
py_map_generation/: __init__.py  __main__.py  main.py
py_map_generation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
